# Wordcounter2

./: CMakeLists.txt  PVS-Studio.cmake  Research  main.cpp
